change policy check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ PROJECT(DocCreator)
 SET( CMAKE_COLOR_MAKEFILE ON )
 #SET( CMAKE_VERBOSE_MAKEFILE ON )
 
-IF(${CMAKE_VERSION} VERSION_GREATER 3.0.0)
+IF(POLICY CMP0063)
   cmake_policy(SET CMP0063 NEW)
 ENDIF()
 
