--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: cpp
 
 cache: ccache
 
-
-dist: trusty #14.04
-sudo: false
+#On Ubuntu Trusty (14.04) we use an external ppa to get Qt 5.9
+#Qt is then installed in /opt/qt59/
+#See https://launchpad.net/~beineri/+archive/ubuntu/opt-qt591-trusty
 
 jobs:
   include:
@@ -25,17 +25,16 @@ jobs:
             - libopencv-dev
 
       before_install:
-        # add external ppf for Qt 5.9
         - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
         - sudo apt-get -qy update
 
       install:
-        - sudo apt-get -qy install qt59-meta-minimal
+        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
         
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
         - ninja -j 3
 
     ###
@@ -54,17 +53,16 @@ jobs:
             - libopencv-dev
 
       before_install:
-        # add external ppf for Qt 5.9
         - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
         - sudo apt-get -qy update
 
       install:
-        - sudo apt-get -qy install qt59-meta-minimal
+        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
         
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DCMAKE_PREFIX_PATH=/opt/qt59/
         - ninja -j 3
 
     ###
@@ -84,13 +82,12 @@ jobs:
             - g++-7.0
 
       before_install:
-        # add external ppf for Qt 5.9
         - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
         - sudo apt-get -qy update
-        - eval "${MATRIX_EVAL}
+        - eval "${MATRIX_EVAL}"
 
       install:
-        - sudo apt-get -qy install qt59-meta-minimal
+        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
         
       env:
         - MATRIX_EVAL="CC=gcc-7.0 && CXX=g++-7.0"
@@ -118,13 +115,13 @@ jobs:
             - clang-5.0
 
       before_install:
-        # add external ppf for Qt 5.9
+        # add external ppa for Qt 5.9
         - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
         - sudo apt-get -qy update
-        - eval "${MATRIX_EVAL}
+        - eval "${MATRIX_EVAL}"
 
       install:
-        - sudo apt-get -qy install qt59-meta-minimal
+        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
         
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
@@ -132,7 +129,7 @@ jobs:
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
         - ninja -j 3
 
   #######################################################
