--- a/.travis.yml
+++ b/.travis.yml
@@ -23,18 +23,14 @@ jobs:
             - libpng-dev
             - libjpeg-dev
             - libopencv-dev
+            - qtbase5-dev
+            - qtdeclarative5-dev
+            - libqt5xmlpatterns5-dev
 
-      before_install:
-        - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
-        - sudo apt-get -qy update
-
-      install:
-        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
-        
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release 
         - ninja -j 3
 
     ###
@@ -51,22 +47,18 @@ jobs:
             - libpng-dev
             - libjpeg-dev
             - libopencv-dev
+            - qtbase5-dev
+            - qtdeclarative5-dev
+            - libqt5xmlpatterns5-dev
 
-      before_install:
-        - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
-        - sudo apt-get -qy update
-
-      install:
-        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
-        
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug -DCMAKE_PREFIX_PATH=/opt/qt59/
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Debug 
         - ninja -j 3
 
     ###
-    - stage: linux, gcc-7.0, Qt5, Release
+    - stage: linux, gcc-7.0, Qt5.9, Release
       os: linux
       dist: trusty
       compiler: gcc
@@ -99,7 +91,7 @@ jobs:
         - ninja -j 3
 
     ###
-    - stage: linux, clang-5.0, Qt5, Release
+    - stage: linux, clang-5.0, Qt5.9, Release
       os: linux
       dist: trusty
       compiler: gcc
