--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
             - qtbase5-dev
             - qtdeclarative5-dev
             - libqt5xmlpatterns5-dev
+            - libqt5opengl5-dev
 
       script:
         - mkdir build
@@ -50,6 +51,7 @@ jobs:
             - qtbase5-dev
             - qtdeclarative5-dev
             - libqt5xmlpatterns5-dev
+            - libqt5opengl5-dev
 
       script:
         - mkdir build
