--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ cache: ccache
 jobs:
   include:
     ###
-    - stage: linux, gcc, Qt5, Release
+    - stage: linux, gcc-4.8.3, Qt5.2.1, Release
       os: linux
       dist: trusty
       compiler: gcc
@@ -35,7 +35,7 @@ jobs:
         - ninja -j 3
 
     ###
-    - stage: linux, gcc, Qt5, Debug
+    - stage: linux, gcc-4.8.3, Qt5.2.1, Debug
       os: linux
       dist: trusty
       compiler: gcc
@@ -73,7 +73,7 @@ jobs:
             - libpng-dev
             - libjpeg-dev
             - libopencv-dev
-            - g++-7.0
+            - g++-7
 
       before_install:
         - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
@@ -84,7 +84,7 @@ jobs:
         - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
         
       env:
-        - MATRIX_EVAL="CC=gcc-7.0 && CXX=g++-7.0"
+        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
 
       script:
         - mkdir build
