--- a/.travis.yml
+++ b/.travis.yml
@@ -66,6 +66,9 @@ jobs:
       compiler: gcc
       addons:
         apt:
+	  sources:
+	    - ubuntu-toolchain-r-test
+	    - deadsnakes
           packages:
             - cmake
             - ccache
@@ -99,6 +102,9 @@ jobs:
       compiler: gcc
       addons:
         apt:
+	  sources:
+	    - ubuntu-toolchain-r-test
+	    - deadsnakes
           packages:
             - cmake
             - ccache
