--- a/.travis.yml
+++ b/.travis.yml
@@ -92,7 +92,7 @@ jobs:
       script:
         - mkdir build
         - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release
+        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
         - ninja -j 3
 
     ###
