--- a/.travis.yml
+++ b/.travis.yml
@@ -97,47 +97,48 @@ jobs:
         - ninja -j 3
 
     ###
-    - stage: Ubuntu 14.04, clang-3.9, Qt5.9, Release
-      os: linux
-      dist: trusty
-      compiler: gcc
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-            - llvm-toolchain-trusty-3.9
-            - deadsnakes
-          packages:
-            - cmake
-            - ccache
-            - ninja-build
-            - libpng-dev
-            - libjpeg-dev
-            - clang-3.9
-            - libc++-dev
-            - libc++abi-dev
+    # 21/11/2017 This configuration odes not work: libstdc++ is used instead of libc++
+    # - stage: Ubuntu 14.04, clang-5.0, Qt5.9, Release
+    #   os: linux
+    #   dist: trusty
+    #   compiler: gcc
+    #   addons:
+    #     apt:
+    #       sources:
+    #         - ubuntu-toolchain-r-test
+    #         - llvm-toolchain-trusty-5.0
+    #         - deadsnakes
+    #       packages:
+    #         - cmake
+    #         - ccache
+    #         - ninja-build
+    #         - libpng-dev
+    #         - libjpeg-dev
+    #         - clang-5.0
+    #         - libc++-dev
+    #         - libc++abi-dev
 
-      #On Linux, with clang, OpencV 3.1 or greater is needed.
+    #   #On Linux, with clang, OpencV 3.1 or greater is needed.
             
-      before_install:
-        # add external ppa for Qt 5.9
-        - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
-        - sudo add-apt-repository -y ppa:lkoppel/opencv
-        - sudo apt-get -qy update
-        - eval "${MATRIX_EVAL}"
+    #   before_install:
+    #     # add external ppa for Qt 5.9
+    #     - sudo add-apt-repository -y ppa:beineri/opt-qt591-trusty
+    #     - sudo add-apt-repository -y ppa:lkoppel/opencv
+    #     - sudo apt-get -qy update
+    #     - eval "${MATRIX_EVAL}"
 
-      install:
-        - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
-        - sudo apt-get -qy install libopencv-dev
+    #   install:
+    #     - sudo apt-get -qy install qt59-meta-minimal qt59declarative qt59xmlpatterns
+    #     - sudo apt-get -qy install libopencv-dev
         
-      env:
-        - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
+    #   env:
+    #     - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
-      script:
-        - mkdir build
-        - cd build
-        - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
-        - ninja -j 3
+    #   script:
+    #     - mkdir build
+    #     - cd build
+    #     - cmake .. -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/opt/qt59/
+    #     - ninja -j 3
 
   #######################################################
   
@@ -152,14 +153,12 @@ jobs:
         - brew outdated opencv || (brew tap homebrew/science && brew upgrade opencv)
         - ls -l /usr/local
         - ls -l /usr/local/opt
-        - brew --prefix qt5
-        - ls -l /usr/local/opt/qt5
-        - ls -l /usr/local/opt/qt5/bin/qmake
+        - ls -l $(brew --prefix qt5)
 
       script:
         - mkdir build
         - cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/usr/local/opt/qt5
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt5)
         - make -j 3
 
     ###
@@ -176,7 +175,7 @@ jobs:
       script:
         - mkdir build
         - cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=/usr/local/opt/qt5
+        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_PREFIX_PATH=$(brew --prefix qt5)
         - make -j 3
 
         
