--- a/.travis.yml
+++ b/.travis.yml
@@ -153,7 +153,9 @@ jobs:
         - brew outdated opencv || (brew tap homebrew/science && brew upgrade opencv)
         - ls -l /usr/local
         - ls -l /usr/local/opt
-        - ls -l $(brew --prefix qt5)
+        - ls -l /usr/local/Cellar
+        - ls -l /usr/local/Cellar/qt
+        - ls -l "$(brew --prefix qt5)"
 
       script:
         - mkdir build
