allow to compile on MINGW (MSYS2)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,10 +90,10 @@ IF(BUILD_TESSERACT)
   
   message(STATUS "will build leptonica and tesseract from sources")
 
-  IF(NOT MSVC)
+  IF(NOT MSVC AND NOT MINGW)
     SET(LEPTONICA_LIBRARY "${PROJECT_BINARY_DIR}/leptonica/lib/${CMAKE_STATIC_LIBRARY_PREFIX}leptonica${CMAKE_STATIC_LIBRARY_SUFFIX}")
     SET(TESSERACT_LIBRARY "${PROJECT_BINARY_DIR}/tesseract/lib/${CMAKE_STATIC_LIBRARY_PREFIX}libtesseract${CMAKE_STATIC_LIBRARY_SUFFIX}")
-  ELSE(NOT MSVC)
+  ELSE(NOT MSVC AND NOT MINGW)
 
     SET(LEPTONICA_VERSION 1.74.4)
     SET(TESSERACT_VERSION 305)
@@ -121,7 +121,7 @@ IF(BUILD_TESSERACT)
     SET(LEPTONICA_LIBRARY "${PROJECT_BINARY_DIR}/leptonica/lib/${CMAKE_STATIC_LIBRARY_PREFIX}leptonica-${LEPTONICA_VERSION}${DEBUG_EXT}${CMAKE_STATIC_LIBRARY_SUFFIX}")
     #SET(TESSERACT_LIBRARY "${PROJECT_BINARY_DIR}/tesseract/lib/${CMAKE_STATIC_LIBRARY_PREFIX}tesseract${TESSERACT_VERSION}${DEBUG_EXT}${CMAKE_STATIC_LIBRARY_SUFFIX};${PROJECT_BINARY_DIR}/tesseract/lib/${CMAKE_STATIC_LIBRARY_PREFIX}tessopt${CMAKE_STATIC_LIBRARY_SUFFIX};Ws2_32")
     SET(TESSERACT_LIBRARY "${PROJECT_BINARY_DIR}/tesseract/lib/${CMAKE_STATIC_LIBRARY_PREFIX}tesseract${TESSERACT_VERSION}${DEBUG_EXT}${CMAKE_STATIC_LIBRARY_SUFFIX}")
-  ENDIF(NOT MSVC)
+  ENDIF(NOT MSVC AND NOT MINGW)
   
   include(ExternalProject)
 
@@ -222,7 +222,7 @@ IF(BUILD_TESSERACT)
 
   SET(Lept_LIBRARIES "${LEPTONICA_LIBRARY};${OTHER_LIBS}")
   SET(Tesseract_LIBRARIES ${TESSERACT_LIBRARY})
-  IF(MSVC)
+  IF(MSVC OR MINGW)
     SET(Tesseract_LIBRARIES "${TESSERACT_LIBRARY};Ws2_32")
   ENDIF()
 
