--- a/.travis.yml
+++ b/.travis.yml
@@ -144,35 +144,41 @@ jobs:
   
     ###
     - stage: Mac OS, clang, Qt5 & OpenCV from brew, Release
-      os: osx #uses OS X 10.11.6 & Xcode 7.3.1, cmake 3.6.2
+      os: osx
+      osx_image: xcode7.3 #uses OS X 10.11.6 & Xcode 7.3.1, cmake 3.6.2
       compiler: clang
 
       before_install:
         - echo $PATH
-        - rvm use ruby-2.0.0-p648
-        - echo $PATH
+        #- rvm use ruby-2.0.0-p648
+        #- echo $PATH
         - xcodebuild -version
         - brew update
-        - brew config
-        - brew doctor
+        #- brew config
+        #- brew doctor
         #- brew outdated qt5 || brew upgrade --verbose qt5
         #- brew outdated opencv || (brew tap homebrew/science && brew upgrade opencv)
-        - brew list 
         - brew tap homebrew/science 
+        - brew outdated opencv || brew upgrade opencv
+        - brew outdated qt5 || brew upgrade qt5
         - brew list 
-        - brew upgrade --verbose qt@5.7
-        - brew upgrade opencv
-        - brew list 
+        #- brew list 
+        #- brew upgrade --verbose qt@5.7
+        #- brew upgrade opencv
+        #- brew list
+        #- brew install qt5
+        #- brew link --force qt5
         #- echo "brew --prefix qt5=$(brew --prefix qt5)"
-        - echo "brew --prefix qt@5.7=$(brew --prefix qt@5.7)"
-        - echo "brew --prefix opencv=$(brew --prefix opencv)"
-        - ls -l /usr/local
-        - ls -l /usr/local/opt
-        - ls -l /usr/local/Cellar
+        #- echo "brew --prefix qt@5.7=$(brew --prefix qt@5.7)"
+        #- echo "brew --prefix opencv=$(brew --prefix opencv)"
+        #- ls -l /usr/local
+        #- ls -l /usr/local/opt
+        #- ls -l /usr/local/Cellar
         - brew list | grep -i opencv
         - brew list | grep -i qt
+        - brew list --versions qt5
         #- ls -l "$(brew --prefix qt5)"
-        - ls -l "$(brew --prefix qt@5.7)"
+        #- ls -l "$(brew --prefix qt@5.7)"
         #- ls -l /usr/local/Cellar/qt
 
       script:
@@ -184,7 +190,7 @@ jobs:
     ###
     - stage: Mac OS, recent clang, Qt5 & OpenCV from brew, Release
       os: osx
-      osx_image: xcode9.1  #OS X 10.12 & Xcode 9.1
+      osx_image: xcode9.4  #OS X 10.13 & Xcode 9.4.1
       compiler: clang
 
       before_install:
