--- a/.travis.yml
+++ b/.travis.yml
@@ -162,12 +162,11 @@ jobs:
         - brew outdated opencv || brew upgrade opencv
         - brew install qt@5.5 
         - brew list
-        - ls /usr/local/Cellar/
-        - ls /usr/local
-        - ls /usr/local/opt
-        - ls /usr/local/opt/qt
-        - ls /usr/local/opt/qt/bin
+        - ls /usr/local/Cellar/qt@5.5
+        - ls /usr/local/opt/qt@5.5
+        - ls /usr/local/opt/qt@5.5/bin
         - echo "brew --prefix qt@5.5=$(brew --prefix qt@5.5)"
+        - export PATH=$PATH:/usr/local/opt/qt@5.5/bin
         - qmake -version
         #- brew list 
         #- brew upgrade --verbose qt@5.7
