change ShadowBinding to be more similar to other degradations and add tests

--- a/tests/Degradations/CMakeLists.txt
+++ b/tests/Degradations/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 SET(TESTS_DEGRADATIONS_SRC
   testHoleDegradation
+  testBlurDegradation
+  testShadowBinding
+  testPhantomCharacter
   )
 
 SET(LIBS  ${QT_LIBRARIES} ${DocCreator_LIBRARIES} ${OpenCV_LIBS})
